--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ playwright>=1.40.0
 beautifulsoup4>=4.12.0
 lxml>=5.0.0
 selectolax>=0.3.21
+stealth-requests>=2.0.0
 
 # Data processing
 pandas>=2.1.0
