Add Docker support, README, and sample data
- Add Dockerfile with Playwright and stealth-requests support
- Add docker-compose.yml for easy deployment
- Add comprehensive README with architecture docs
- Include sample extracted foreclosure data
- Document the TLS fingerprinting solution for anti-bot bypass

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ env/
 data/*.db
 data/*.csv
 data/*.xlsx
-data/*.json
 data/logs/
+# Keep sample JSON for documentation
+!data/sample_foreclosures.json
 
 # Screenshots (temporary)
 screenshots/
